--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "babel src --out-file ./build/build.js",
+    "start": "node ./build/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "nodemon": "^1.12.1"
+  },
+  "dependencies": {
+    "uuid": "^3.1.0"
   }
 }
